@@ -59,6 +59,7 @@ void CDirectoryCache::SetDirectory(const CStdString& strPath1, const CFileItemLi
   g_directoryCache.ClearDirectory(strPath);
   CDir* dir = new CDir;
   dir->m_strPath = strPath;
+  dir->m_Items.SetFastLookup(true);
   dir->m_Items.Append(items);
   g_directoryCache.m_vecCache.push_back(dir);
 }
@@ -105,14 +106,8 @@ bool CDirectoryCache::FileExists(const CStdString& strFile, bool& bInCache)
     if (dir->m_strPath == strPath)
     {
       bInCache = true;
-      for (int i = 0; i < (int) dir->m_Items.Size(); ++i)
-      {
-        CFileItem* pItem = dir->m_Items[i];
-        if ( CUtil::cmpnocase(pItem->m_strPath, strFixedFile) == 0)
-        {
-          return true;
-        }
-      }
+      if (dir->m_Items.Contains(strFixedFile))
+        return true;
     }
     ++i;
   }
