@@ -22,6 +22,9 @@ namespace DIRECTORY
   {    
     CURL url(strPath);
     std::vector<SZipEntry> entries;
+    // turn on fast lookups
+    bool bWasFast(items.GetFastLookup());
+    items.SetFastLookup(true);
     if (!g_ZipManager.GetZipList(strPath,entries))
       return false;
     CStdString strSkip;
@@ -41,36 +44,39 @@ namespace DIRECTORY
         continue;
       bool bAdd=true;
       for ( unsigned int i=0;i<baseTokens.size()-1;++i )
+      {
         if (pathTokens[i] != baseTokens[i])
         {
           bAdd = false;
           break;
         }
-        if (!bAdd)
+      }
+      if (!bAdd)
+        continue;
+
+      bool bIsFolder = false;
+      if (strEntryName[strEntryName.size()-1] != '\\') // this is a file
+      {
+        if (!IsAllowed(pathTokens[pathTokens.size()-1])) // not allowed
           continue;
 
-        bool bIsFolder = false;
-        if (strEntryName[strEntryName.size()-1] != '\\') // this is a file
-        {
-          if (!IsAllowed(pathTokens[pathTokens.size()-1])) // not allowed
-            continue;
-
-          strEntryName.Format("zip://%s,%i,%s,%s,\\%s",url.GetDomain().c_str(),url.GetPort(),url.GetPassWord().c_str(),url.GetHostName().c_str(),strEntryName.c_str());
-        }
-        else { // this is new folder. add if not already added
-          bIsFolder = true;
-          strEntryName.Format("zip://%s,%i,%s,%s,\\%s",url.GetDomain().c_str(),url.GetPort(),url.GetPassWord().c_str(),url.GetHostName().c_str(),strEntryName.c_str());
-          if (items.HasFileNoCase(strEntryName)) // already added
-            continue;
-        }
-        CFileItem* pFileItem = new CFileItem;
-        pFileItem->SetLabel(pathTokens[pathTokens.size()-1]);
-        pFileItem->m_dwSize = ze->usize;
-        pFileItem->m_strPath = strEntryName;
-        pFileItem->m_bIsFolder = bIsFolder;
-        items.Add(pFileItem);
-
+        strEntryName.Format("zip://%s,%i,%s,%s,\\%s",url.GetDomain().c_str(),url.GetPort(),url.GetPassWord().c_str(),url.GetHostName().c_str(),strEntryName.c_str());
+      }
+      else
+      { // this is new folder. add if not already added
+        bIsFolder = true;
+        strEntryName.Format("zip://%s,%i,%s,%s,\\%s",url.GetDomain().c_str(),url.GetPort(),url.GetPassWord().c_str(),url.GetHostName().c_str(),strEntryName.c_str());
+        if (items.Contains(strEntryName)) // already added
+          continue;
+      }
+      CFileItem* pFileItem = new CFileItem;
+      pFileItem->SetLabel(pathTokens[pathTokens.size()-1]);
+      pFileItem->m_dwSize = ze->usize;
+      pFileItem->m_strPath = strEntryName;
+      pFileItem->m_bIsFolder = bIsFolder;
+      items.Add(pFileItem);
     }
+    items.SetFastLookup(bWasFast);
     return true;
   }
 }
