@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 05-06-2005 added: Faster path lookups in CFileItemList (for DirectoryCache mainly) thanks to desertbear.
  - 05-05-2005 fixed: minor crash fix when switching between gui and fullscreen
  - 05-06-2005 fixed: PAPlayer correctly handles track changes where the number of channels changes + handles 6 channel tracks correctly.
  - 04-06-2005 added: sf.net patch [1209466] Multiple RSS feeds concatenated - thanks to desertbear!
